backend/entity/tests/compile_fail/swap_user_for_org.stderr
error[E0308]: arguments to this function are incorrect
  --> tests/compile_fail/swap_user_for_org.rs:13:13
   |
13 |     let _ = user_is_org_member(user_id, org_id);
   |             ^^^^^^^^^^^^^^^^^^ -------  ------ expected `UserId`, found `OrganizationId`
   |                                |
   |                                expected `OrganizationId`, found `UserId`
   |
note: function defined here
  --> tests/compile_fail/swap_user_for_org.rs:4:4
   |
 4 | fn user_is_org_member(_org: OrganizationId, _user: UserId) -> bool {
   |    ^^^^^^^^^^^^^^^^^^
help: swap these arguments
   |
13 -     let _ = user_is_org_member(user_id, org_id);
13 +     let _ = user_is_org_member(org_id, user_id);
   |
